--- a/scripts/train_cfg.yaml
+++ b/scripts/train_cfg.yaml
@@ -6,7 +6,7 @@ algo:
   name: "SupervisedLearning"
   history_length: &base 15
   batch_size: 32
-  num_learning_epochs: 1
+  num_learning_epochs: 20
   clip_param: 0.2
   learning_rate: 0.001
   max_grad_norm: 1.0
@@ -15,3 +15,8 @@ algo:
 net:
   half_input_size: *base
   output_size: 1
+
+runner:
+  save_interval: 5
+  save_dir: "checkpoints"
+  log_dir: "logs"
