--- a/scripts/train_cfg.yaml
+++ b/scripts/train_cfg.yaml
@@ -1,14 +1,16 @@
 network_name: "ActuatorNet"
-file_path: "data_sets/merged_motor_data.json"
+# file_path: "data_sets/merged_motor_data.json"
+file_path: "data_sets/go1_dataset_x0.25.json"
 device: "cpu"
 
 algo:
   name: "SupervisedLearning"
   history_length: &base 15
   batch_size: 32
-  num_learning_epochs: 20
+  num_learning_epochs: 75
   clip_param: 0.2
   learning_rate: 0.001
+  weight_decay: 0.0001
   max_grad_norm: 1.0
   shuffle: False
 
@@ -17,6 +19,6 @@ net:
   output_size: 1
 
 runner:
-  save_interval: 5
+  save_interval: 200
   save_dir: "checkpoints"
   log_dir: "logs"
