--- a/scripts/train_cfg.yaml
+++ b/scripts/train_cfg.yaml
@@ -1,14 +1,12 @@
 network_name: "ActuatorNet"
-# file_path: "data_sets/merged_motor_data.json"
-# file_path: "data_sets/go1_dataset_x0.25.json"
-file_path: "data_sets/smooth/go1_dataset_x0.25_smooth.json"
+file_path: "data_sets/merged_motor_data_ultimate.json"
 device: "cpu"
 
 algo:
   name: "SupervisedLearning"
   history_length: &base 15
   batch_size: 32
-  num_learning_epochs: 75
+  num_learning_epochs: 1000
   clip_param: 0.2
   learning_rate: 0.001
   weight_decay: 0.0001
@@ -20,6 +18,6 @@ net:
   output_size: 1
 
 runner:
-  save_interval: 200
+  save_interval: 500
   save_dir: "checkpoints"
   log_dir: "logs"
