--- a/scripts/train_cfg.yaml
+++ b/scripts/train_cfg.yaml
@@ -7,6 +7,7 @@ algo:
   history_length: &base 15
   batch_size: 32
   num_learning_epochs: 5000
+  num_testing_epochs: 400
   clip_param: 0.2
   learning_rate: 0.001
   weight_decay: 0.0001
@@ -18,6 +19,6 @@ net:
   output_size: 1
 
 runner:
-  save_interval: 2000
+  save_interval: 2500
   save_dir: "checkpoints"
   log_dir: "logs"
