--- a/scripts/test_cfg.yaml
+++ b/scripts/test_cfg.yaml
@@ -1,6 +1,6 @@
 network_name: "ActuatorNet"
 policy_path: "checkpoints/model_100.pt"
-file_path: "data_sets/merged_motor_data_ultimate_pro_plus.json"
+file_path: "data_sets/merged_motor_data_ultimate_pro_max_plus.json"
 device: "cpu"
 
 algo:
@@ -8,7 +8,7 @@ algo:
   history_length: &base 15
   batch_size: 32
   num_learning_epochs: 5000
-  num_testing_epochs: 400
+  num_testing_epochs: 200
   clip_param: 0.2
   learning_rate: 0.001
   weight_decay: 0.0001
@@ -18,6 +18,7 @@ algo:
 net:
   half_input_size: *base
   output_size: 1
+  hidden_size: [64, 128, 64, 32, 16]
 
 runner:
   save_interval: 2500
